syntax = "proto3";

package microservices_starter.authorization.auth;

message RegistrationRequest {
  string email = 1;
  string first_name = 3;
  string last_name = 4;
  string password = 5;
  bool owner = 6;
}

message RegistrationResponse {
  string access_token = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string access_token = 1;
}
